Added docs and updated README.md
